[dependency] @pkg/lib에 @cute/web가 의존한다
@cute/web이 @pkg/lib의 sayHello 메소드를 사용

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,6 +15,9 @@
     "jsx": "preserve",
     "incremental": true,
     "noImplicitAny": false,
+    "paths": {
+      "@pkg/lib": ["../../package/lib/src/index"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
