[dev] 타입 체크 스크립트 추가

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "packageManager": "yarn@3.3.0",
+  "scripts": {
+    "typecheck": "tsc --project ./tsconfig.json --noEmit"
+  },
   "devDependencies": {
     "typescript": "^4.9.3"
   }
